Mirroring from Micro.blog.

--- a/_posts/2018-04-12-the-irony.md
+++ b/_posts/2018-04-12-the-irony.md
@@ -12,6 +12,6 @@ I guess Mark learned an important lesson: never to leave your notes open and una
 
 To reuse and rephrase a [quote by Mr. Zuckerberg himself](http://www.businessinsider.com/well-these-new-zuckerberg-ims-wont-help-facebooks-privacy-problems-2010-5?international=true&r=US&IR=T); _'I've "trust them." Dumb f*ck'_
 
-There is, however, quite some talk on social media if it's morally ok for the press to share the picture taken.  A valid discussion even when it's a hearing regarding a company under testimony for violating people's privacy. We should Tteat others as you would want them to treat you[^1].
+There is, however, quite some talk on social media if it's morally ok for the press to share the picture taken.  A valid discussion even when it's a hearing regarding a company under testimony for violating people's privacy. We should treat others as you would want them to treat you[^1].
 
 [^1]: I'm not linking to the photo as I think this information should have been kept private. The company in question doesn't change this for me.
