Mirroring from Micro.blog.

--- a/_posts/2018-05-03-whos-next.md
+++ b/_posts/2018-05-03-whos-next.md
@@ -14,6 +14,6 @@ Step 3: build a competitor to dating apps with the data you are now keeping to y
 
 [John Kneeland](https://mobile.twitter.com/SirKneeland/status/991373570730147840) via [Daring fireball](https://www.theverge.com/2018/5/1/17307782/facebook-tinder-dating-app-f8-match-okcupid)
 
-Fool me once, shame on you_(r news business)_; fool me twice, shame on me_(re dating apps)_ 
+Fool me once, shame on you(r news business); fool me twice, shame on me(re dating apps).
 
 So this begs the question; who's business will be next?
