--- a/_posts/2018-04-12-the-irony.md
+++ b/_posts/2018-04-12-the-irony.md
@@ -3,6 +3,7 @@ layout: post
 title: "The Irony"
 microblog: false
 audio: 
+photo: 
 date: 2018-04-12 17:11:59 +0100
 guid: http://roelwillems.micro.blog/2018/04/12/the-irony.html
 ---
