--- a/_posts/2018-04-18-223427.md
+++ b/_posts/2018-04-18-223427.md
@@ -2,6 +2,7 @@
 layout: post
 microblog: true
 audio: 
+photo: 
 date: 2018-04-18 23:34:27 +0100
 guid: http://roelwillems.micro.blog/2018/04/18/223427.html
 ---
