--- a/_posts/2018-04-30-174249.md
+++ b/_posts/2018-04-30-174249.md
@@ -2,9 +2,10 @@
 layout: post
 microblog: true
 audio: 
+photo: 
 date: 2018-04-30 18:42:49 +0100
 guid: http://roelwillems.micro.blog/2018/04/30/174249.html
 ---
-![Concept2 Marathon challenge](https://f000.backblazeb2.com/file/Roel-Share/maratoncent-chall-2018-web.png)
+![Concept2 Marathon challenge](https://roelwillems.com/uploads/2018/37f2320bca.png)
 
 [Challenge](https://log.concept2.com/challenges/marathon) accepted
