--- a/_posts/2018-04-30-by-the-way.md
+++ b/_posts/2018-04-30-by-the-way.md
@@ -2,6 +2,7 @@
 layout: post
 microblog: true
 audio: 
+photo: 
 date: 2018-04-30 19:16:47 +0100
 guid: http://roelwillems.micro.blog/2018/04/30/by-the-way.html
 ---
