--- a/_posts/2018-05-03-whos-next.md
+++ b/_posts/2018-05-03-whos-next.md
@@ -3,6 +3,7 @@ layout: post
 title: "Who’s next?"
 microblog: false
 audio: 
+photo: 
 date: 2018-05-03 22:49:17 +0100
 guid: http://roelwillems.micro.blog/2018/05/03/whos-next.html
 ---
