--- a/_posts/2018-05-10-202605.md
+++ b/_posts/2018-05-10-202605.md
@@ -2,6 +2,7 @@
 layout: post
 microblog: true
 audio: 
+photo: 
 date: 2018-05-10 21:26:05 +0100
 guid: http://roelwillems.micro.blog/2018/05/10/202605.html
 ---
