Mirroring from Micro.blog.

--- a/_posts/2018-05-12-133403.md
+++ b/_posts/2018-05-12-133403.md
@@ -2,13 +2,14 @@
 layout: post
 microblog: true
 audio: 
+photo: 
 date: 2018-05-12 14:34:03 +0100
 guid: http://roelwillems.micro.blog/2018/05/12/133403.html
 ---
 **Row Log Update** 🚣‍♂️  
 Calendar Week: 18  
 Workout: 6.855 meters /500m: 2:11  
-![workout](https://dsh.re/7fc03)
+![workout](https://roelwillems.com/uploads/2018/70d85c2269.jpg)
 
 **Total Meters**  
 This Week: 27.614  
