Mirroring from Micro.blog.

--- a/_posts/2018-05-14-204856.md
+++ b/_posts/2018-05-14-204856.md
@@ -2,13 +2,14 @@
 layout: post
 microblog: true
 audio: 
+photo: 
 date: 2018-05-14 21:48:56 +0100
 guid: http://roelwillems.micro.blog/2018/05/14/204856.html
 ---
 **Row Log Update** 🚣‍♂️  
 Calendar Week: 19  
 Workout: 7,034 meters /500m: 2:07  
-![workout](https://dsh.re/72f22)
+![workout](https://roelwillems.com/uploads/2018/a9c1709c17.jpg)
 
 **Total Meters**  
 This Week: 7,034  
