--- a/_posts/2018-11-18-to-www-or.md
+++ b/_posts/2018-11-18-to-www-or.md
@@ -3,6 +3,7 @@ layout: post
 title: "∞ To www or not to www"
 microblog: false
 audio: 
+photo: 
 date: 2018-11-18 15:56:13 +0100
 guid: http://roelwillems.micro.blog/2018/11/18/to-www-or.html
 ---
